...
                              divider,
                              Showcase(
                                key: sessionStateTextKey,
                                targetPadding: const EdgeInsets.all(12),
                                description:
                                    'This text shows the current session mode.\n'
                                    'There 3 modes: "Focus", "Short Break, and "Long Break".',
                                child: const StateText(),
                              ),
                              const Padding(
                                padding: EdgeInsets.symmetric(
                                  horizontal: 32,
                                ),
...
                          description: 'Fullscreen focus mode',
                          child: TextButton.icon(
                            onPressed: () => Navigator.of(context).pushNamed(
                              FullScreenPage.route,
                            ),
                            icon: const Icon(Icons.fullscreen),
                            label: const Text('Fullscreen'),
                          ),
                        ),
                        buildVerticalDivider(),
                        Showcase(
                          key: todolistButtonKey,
                          description: 'Todo List, manage your tasks here',
...
                child: Row(
                  children: [
                    Showcase(
                      key: settingButtonKey,
                      description: 'All settings are over here',
                      child: Tooltip(
                        message: 'Settings',
                        child: IconButton(
                          onPressed: () {
                            Navigator.of(context).pushNamed(
                              SettingsPage.route,
                            );
                          },
...
          children: [
            Showcase(
              key: previousButtonKey,
              description: 'Go back to previous session',
              targetPadding: const EdgeInsets.all(-4),
              child: Tooltip(
                message: 'Previous Session',
                child: Hero(
                  tag: 'button-previous',
                  child: IconButton(
                    onPressed: sessionNotifier.previous,
                    icon: const Icon(
                      Icons.skip_previous,
...
                    sessionNotifier.start();
                  }
                },
                child: AnimatedSize(
                  duration: const Duration(milliseconds: 100),
                  curve: Curves.easeInOut,
                  child: Text(isRunning ? 'Pause' : 'Start'),
                ),
              ),
            ),
            Showcase(
              key: nextButtonKey,
              description: 'Skip to the next session',
              targetPadding: const EdgeInsets.all(-4),
              child: Tooltip(
                message: 'Next Session',
                child: Hero(
                  tag: 'button-next',
                  child: IconButton(
                    onPressed: sessionNotifier.next,
                    icon: const Icon(
                      Icons.skip_next,
...
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
            Showcase(
              key: resetButtonKey,
              description: 'Reset the timer for current session',
              child: Tooltip(
                message: 'Reset Timer',
                child: IconButton(
                  onPressed: () {
                    sessionNotifier.reset();
                  },
                  icon: const Icon(Icons.replay),
                ),
...
            buildVerticalDivider(),
            Showcase(
              key: notificationButtonKey,
              description:
                  "Change the notification sound.\nIt's silent by default",
              child: Tooltip(
                message: 'Notification Sound',
                child: IconButton(
                  onPressed: () => handleTuneButton(context),
                  icon: const Icon(Icons.music_note),
                ),
              ),
            ),
...
