...
part 'tune.freezed.dart';

part 'tune.g.dart';

const tunes = <String, String>{
  '': 'Disabled',
  'sound001_positive_notification.mp3': 'Positive Notification',
  'sound002_notification.mp3': 'Notification',
  'sound003_full_alert.mp3': 'Full Alert',
  'sound004_cullingham.mp3': 'Cullingham',
  'sound005_beep_beep.mp3': 'Beep Beep',
};

@riverpod
...
