...
          dismissType: DismissType.onSwipe,
        );
      }
    });

    final controller = usePageController();
    final buttonText = useState('Next');
    final index = useState(0);
    useEffect(
      () {
        SystemChrome.setPreferredOrientations([
          DeviceOrientation.portraitDown,
          DeviceOrientation.portraitUp,
        ]);
        controller.addListener(() {
          index.value = (controller.page ?? 0).round();
          buttonText.value = index.value < 2 ? 'Next' : 'Take me to Gameodoro!';
        });

        return null;
      },
      [],
    );
...
